# zero2prod

./: Cargo.toml  Dockerfile  LICENSE  README.md  configuration.yaml  spec.yaml  sqlx-data.json
.github/workflows/: general.yml  rust.yml
configuration/: base.yaml  local.yaml
migrations/: 20230601050724_create_subscriptions_table.sql  20230726072132_make_status_not_null_in_subscriptions.sql  20231204165722_seed_user.sql
scripts/: debug.sh  helpers.sh  init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: persistence.rs
src/routes/: hello.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
