[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
config = { version = "0.13.3", default-features= false, features = ["yaml"] }
random-string = "1.0.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
sqlx = { features = ["postgres", "macros", "runtime-actix-rustls", "chrono", "uuid", "migrate", "offline"] }
tokio = "1.28.2"
tracing = { version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.7.5"
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
unicode-segmentation = "1.10.1"
urlencoding = "2.1.2"
uuid = { version = "1.3.3", features = ["v4"] }
validator = "0.16.1"
reqwest = { version = "0.11.18", default-features = false, features=['json','rustls-tls']}

[dev-dependencies]

claims = "0.7.1"
fake = "~2.3"
once_cell = "1.18.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tokio = { features=["rt","macros"]}
wiremock ="0.5"
serde_json = "1"
