[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
config = { version = "0.13.3", default-features= false, features = ["yaml"] }
random-string = "1.0.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
sqlx = { features = ["postgres", "macros", "runtime-actix-rustls", "chrono", "uuid", "migrate", "offline"] }
tokio = "1.28.2"
tracing = { version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.7.5"
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
unicode-segmentation = "1.10.1"
urlencoding = "2.1.2"
uuid = { version = "1.3.3", features = ["v4","serde"] }
validator = "0.16.1"
reqwest = { version = "0.11.18", default-features = false, features=['json','rustls-tls',"cookies"]}
rand = {version="0.8", features=["std_rng"]}
thiserror = "1.0.49"
anyhow = "1.0.75"
base64 = "0.21.5"
sha3 = "0.10.8"
argon2 = {version="0.3", features=["std"]}
htmlescape = "0.3"
actix-web-flash-messages = {version = "0.3", features = ["cookies"]}
serde_json = "1"

[dependencies.actix-session]
git = "https://github.com/actix/actix-extras"
branch = "master"
features = ["redis-rs-tls-session"]

[dev-dependencies]

claims = "0.7.1"
fake = "~2.3"
linkify = "0.8"
once_cell = "1.18.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tokio = { features=["rt","macros"]}
wiremock ="0.5"

